--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="HandheldFriendly" content="True">
 
-        <title>InterFlare / No-nonsense Creative Minecraft Server</title>
+        <title>InterFlare / Creative Minecraft Server</title>
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/site.2.css">
@@ -24,11 +24,11 @@
 
         <meta property="og:site_name" content="InterFlare">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="InterFlare / No-nonsense Minecraft Server">
+        <meta property="og:title" content="InterFlare / Creative Minecraft Server">
         <meta property="og:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
         <meta property="og:url" content="https://interflare.net/">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="InterFlare / No-nonsense Minecraft Server">
+        <meta name="twitter:title" content="InterFlare / Creative Minecraft Server">
         <meta name="twitter:description" content="A creative minecraft server that is super-easy and fast to get started. Great for collaboration!">
         <meta name="twitter:url" content="https://interflare.net/">
 
