--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0=" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/site.2.css">
 
-        <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-W6G4DT8');</script> -->
+        })(window,document,'script','dataLayer','GTM-W6G4DT8');</script>
 
         <meta name="description" content="A creative minecraft server, equipped to handle anything from casual builds to massive projects">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -36,8 +36,8 @@
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
     <body>
-        <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6G4DT8"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W6G4DT8"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="off-canvas-wrapper">
             <div class="off-canvas position-right" id="side-menu" data-off-canvas data-close-on-click="false" data-content-overlay="false">
                 <mobile-nav>
